# FrankaToss

./: .gitignore  README.md  check_env.py  throw_test.py  throw_train.py  tossing.repos
RL/: csv_checker.py  ee_pose.csv  throw_test.py  throw_train.py
RL/temp/DDPG_0/: events.out.tfevents.1708389995.iladyu.13086.0  events.out.tfevents.1708390152.iladyu.13609.0  events.out.tfevents.1708390399.iladyu.13910.0  events.out.tfevents.1708390475.iladyu.13910.1  events.out.tfevents.1708390551.iladyu.13910.2  events.out.tfevents.1708390615.iladyu.13910.3  events.out.tfevents.1708390700.iladyu.13910.4  events.out.tfevents.1708390768.iladyu.13910.5  events.out.tfevents.1708390819.iladyu.13910.6  events.out.tfevents.1708390869.iladyu.13910.7  events.out.tfevents.1708390918.iladyu.13910.8  events.out.tfevents.1708392875.iladyu.16466.0  events.out.tfevents.1708392962.iladyu.16603.0  events.out.tfevents.1708393014.iladyu.16736.0  events.out.tfevents.1708393053.iladyu.16874.0  events.out.tfevents.1708393100.iladyu.16874.1  events.out.tfevents.1708393142.iladyu.16874.2  events.out.tfevents.1708393197.iladyu.16874.3  events.out.tfevents.1708393278.iladyu.16874.4  events.out.tfevents.1708423109.iladyu.18580.0
RL/temp/DDPG_1708882932/: events.out.tfevents.1708634819.iladyu.138024.0  events.out.tfevents.1708634951.iladyu.138024.1  events.out.tfevents.1708635079.iladyu.138024.2  events.out.tfevents.1708635218.iladyu.138024.3  (+61 more)
moveit_wrapper/: package.xml
toss/: package.xml  setup.cfg  setup.py
toss/data/: ee_pose.csv
toss/launch/: toss.launch.xml
toss/toss/: tossing.py
(+223 files in other folders)
