<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>toss</name>
  <version>0.0.1</version>
  <description>Main package to throw objects</description>
  <maintainer email="natraj.anuj@gmail.com">anujn</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_wrapper</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveitapi</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
